Fix author field

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,9 +2,8 @@ Package: nemsr
 Type: Package
 Title: Process NEMS Datasets in R
 Version: 0.1.0
-Authors@R: c( 
-    person("Greg", "Macfarlane", email = "gregmacfarlane.com", role = "cre")
-    )
+Authors@R: c(person("Greg", "Macfarlane", email = "gregmacfarlane@gmail.com",
+    role = c("aut", "cre")))
 Description: This package contains convenience functions for calculating 
     nutritional statistics on data collected using the Nutritional Environment
     Measures Surveys.
