--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,3 +10,4 @@ Description: This package contains convenience functions for calculating
 License: Apache License (>= 2)
 Encoding: UTF-8
 LazyData: true
+RoxygenNote: 7.1.2
