Clean up exports, depends, and README

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,3 +3,10 @@
 export(calculate_market_basket)
 export(calculate_nems_score)
 export(read_nemss)
+importFrom(dplyr,case_when)
+importFrom(dplyr,if_else)
+importFrom(dplyr,mutate)
+importFrom(dplyr,select)
+importFrom(haven,read_sav)
+importFrom(tibble,tibble)
+importFrom(tidyr,replace_na)
