--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,4 +12,9 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.2
 Imports: 
-    haven
+    dplyr,
+    haven,
+    tibble,
+    tidyr
+Depends: 
+    R (>= 4.1.0)
